name:               control-monad-loop
version:            0.1
synopsis:           Simple monad transformer for imperative-style loops
description:
    A library of looping constructs with @continue@ and @exit@ control flow
    statements.
homepage:           https://github.com/joeyadams/haskell-control-monad-loop
license:            BSD3
license-file:       LICENSE
author:             Joey Adams
maintainer:         joeyadams3.14159@gmail.com
copyright:          Copyright (c) Joseph Adams 2012
category:           Control
build-type:         Simple
cabal-version:      >=1.8

extra-source-files:
    test/leak.hs

library
    exposed-modules:
        Control.Monad.Trans.Loop

    build-depends   : base >= 4 && < 5
                    , transformers

    ghc-options: -Wall -fwarn-tabs
